# ark-public

./: .gitignore  ARK_Technologies_SDK_Developer_Kit_README.md  README.md
.github/workflows/: ci.yml
api-server/: package.json  tsconfig.json
api-server/src/: server.ts
docs/: ARCHITECTURE.md  SECURITY.md
mock-api/: tsconfig.json
mock-api/src/: server.ts
msw/: package.json  tsconfig.json
msw/src/: browser.ts  handlers.ts  index.ts  node.ts
sdk/ark-sdk-js/: package.json
sdk/ark-sdk-js/src/: client.ts  http.ts  index.ts  types.ts
sdk/ark-sdk-py/: README.md  pyproject.toml
sdk/ark-sdk-py/ark_sdk/: client.py  http.py  types.py
