[project]
name = "ark-sdk"
version = "0.1.0"
description = "Lightweight Python SDK for Ark APIs (auth, credits, billing placeholders)"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{ name = "Ark Technologies" }]
dependencies = [
"httpx>=0.27.0",
]


[project.urls]
Homepage = "https://arktechnologies.ai"


[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
